2014-08-27  Holger Seelig  <holger.seelig@yahoo.de>

	* AdjustmentObject.h:
	* OutlineEditor.cpp:
	* X3DOutlineTreeView.h:
	* OutlineTreeObserver.h:
	* X3DOutlineTreeView.cpp:
	* OutlineTreeObserver.cpp: 

2014-08-27  Holger Seelig  <holger.seelig@yahoo.de>

	* AdjustmentObject.h:
	* RotationTool.x3dv:
	* X3DOutlineTreeView.cpp: 

2014-08-26  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointEditor.xml:
	* OutlineEditor.cpp:
	* X3DOutlineTreeView.h:
	* OutlineTreeObserver.h:
	* ViewpointEditor.cpp:
	* X3DOutlineTreeView.cpp:
	* X3DViewpointEditorInterface.h:
	* X3DViewpointEditor.h:
	* OutlineTreeObserver.cpp:
	* X3DViewpointEditorInterface.cpp:
	* X3DViewpointEditor.cpp:
	* OutlineTreeViewEditor.cpp:
	* X3DGeoViewpointEditor.h:
	* X3DOrthoViewpointEditor.h:
	* X3DGeoViewpointEditor.cpp:
	* X3DOrthoViewpointEditor.cpp: 

2014-08-26  Holger Seelig  <holger.seelig@yahoo.de>

	* RotationTool.h:
	* MFStringGeoSystem.h:
	* ViewpointEditor.xml:
	* X3DSpotLightEditor.h:
	* Button.x3dv:
	* X3DSpotLightEditor.cpp:
	* X3DPointLightEditor.cpp:
	* X3DViewpointEditorInterface.h:
	* X3DViewpointEditor.h:
	* CheckButton.x3dv:
	* X3DViewpointEditor.cpp:
	* X3DViewpointEditorInterface.cpp:
	* X3DGeoViewpointEditor.h:
	* X3DGeoViewpointEditor.cpp:
	* X3DOrthoViewpointEditor.h:
	* X3DDirectionalLightEditor.cpp:
	* CheckButtonGroup.x3dv:
	* X3DOrthoViewpointEditor.cpp:
	* CheckButtonGroup.x3dv: 

2014-08-25  Holger Seelig  <holger.seelig@yahoo.de>

	* NormalTool.h:
	* X3DBrowserEditor.cpp:
	* NormalTool.x3dv:
	* RotationTool.x3dv:
	* ScriptEditor.cpp:
	* X3DOutlineTreeView.cpp: 

2014-08-25  Holger Seelig  <holger.seelig@yahoo.de>

	* NodeIndex.cpp:
	* OutlineTreeViewEditor.cpp: 

2014-08-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DUserInterface.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DUserInterface.cpp:
	* BrowserWindow.xml:
	* ScriptEditor.cpp:
	* X3DBrowserWindowInterface.cpp:
	* OutlineTreeViewEditor.cpp: 

2014-08-24  Holger Seelig  <holger.seelig@yahoo.de>
