@@ -50,6 +50,7 @@
 
 #include "NodeIndex.h"
 
+#include "../../Base/AdjustmentObject.h"
 #include "../../Configuration/config.h"
 
 #include <Titania/OS.h>
@@ -74,7 +75,9 @@ NodeIndex::NodeIndex (BrowserWindow* const browserWindow) :
 	                index (NAMED_NODES_INDEX),
 	                types (),
 	                nodes (),
-	                 node ()
+	                 node (),
+	          hadjustment (new AdjustmentObject ()),
+	          vadjustment (new AdjustmentObject ())
 {
 	addChildren (node);
 	setup ();
@@ -142,9 +145,10 @@ NodeIndex::setNodes (X3D::MFNode && value)
 			node = nullptr;
 	}
 
-	Glib::signal_idle () .connect_once (sigc::bind (sigc::ptr_fun (&NodeIndex::set_adjustment), getTreeView () .get_hadjustment (), getTreeView () .get_hadjustment () -> get_value ()));
-	Glib::signal_idle () .connect_once (sigc::bind (sigc::ptr_fun (&NodeIndex::set_adjustment), getTreeView () .get_vadjustment (), getTreeView () .get_vadjustment () -> get_value ()));
+	hadjustment -> preserve (getTreeView () .get_hadjustment ());
+	vadjustment -> preserve (getTreeView () .get_vadjustment ());
 
+	getTreeView () .unset_model ();
 	getListStore () -> clear ();
 
 	const auto importingInlines = getImportingInlines ();
@@ -158,6 +162,9 @@ NodeIndex::setNodes (X3D::MFNode && value)
 		row -> set_value (Columns::IMPORTED_NODES, importingInlines .count (node) ? document_import : empty_string);
 		row -> set_value (Columns::EXPORTED_NODES, exportedNodes .count (node)    ? document_export : empty_string);
 	}
+
+	getTreeView () .set_model (getListStore ());
+	getTreeView () .set_search_column (Columns::NAME);
 }
 
 /***
