@@ -275,7 +275,8 @@ X3DOutlineTreeView::set_model (const Glib::RefPtr <OutlineTreeModel> & value)
 void
 X3DOutlineTreeView::preserve_adjustments ()
 {
-	set_adjustments (get_hadjustment () -> get_value () , get_vadjustment () -> get_value ());
+	hadjustment -> preserve (get_hadjustment ());
+	vadjustment -> preserve (get_vadjustment ());
 }
 
 void
