@@ -1,6 +1,15 @@
 2014-08-27  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* AdjustmentObject.h:
+	* NodeIndex.h:
+	* NodeIndex.cpp:
+	* ViewpointList.h:
+	* ViewpointList.cpp:
+	* X3DOutlineTreeView.cpp: 
+
+2014-08-27  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* AdjustmentObject.h:
 	* OutlineEditor.cpp:
 	* X3DOutlineTreeView.h:
 	* OutlineTreeObserver.h:
